--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --image-base-url: 'http://localhost:3001';
+}
+
 /* Root font size for responsive scaling */
 html {
   font-size: 16px; /* Base size */
